--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "geometry",
   "version": "1.0.0",
   "description": "Mathspace Frontend Challenge",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon server/server.js --ignore components"
@@ -13,20 +14,33 @@
   "author": "Tom Jiang",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.0",
+    "bootstrap": "^3.3.6",
+    "classnames": "^2.2.5",
+    "es5-shim": "^4.5.9",
     "express": "^4.13.4",
+    "font-awesome": "^4.6.3",
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
+    "less": "^2.7.1",
+    "object-assign": "^4.1.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.5.0",
     "redux-thunk": "^1.0.3",
-    "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.0",
+    "css-loader": "^0.23.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.13"
   }
 }
