--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "less": "^2.7.1",
     "object-assign": "^4.1.0",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.22.6",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
@@ -41,6 +42,8 @@
     "css-loader": "^0.23.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
+    "file-loader": "^0.11.1",
+    "url-loader": "^0.5.8",
     "webpack": "^1.12.13"
   }
 }
