--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "classnames": "^2.2.5",
     "es5-shim": "^4.5.9",
     "express": "^4.13.4",
-    "font-awesome": "^4.6.3",
     "flux": "^2.1.1",
     "keymirror": "^0.1.1",
     "less": "^2.7.1",
     "object-assign": "^4.1.0",
-    "react": "^0.14.7",
+    "react": "^15.0.0",
     "react-bootstrap": "^0.22.6",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.0.0",
     "react-redux": "^4.4.0",
+    "react-transition-group": "^1.1.2",
     "redux": "^3.3.1",
     "redux-logger": "^2.5.0",
     "redux-thunk": "^1.0.3",
