--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,33 @@
-
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/nodejs:4.8.2-jessie
+    steps:
+      - checkout
+      - run:
+        name: Update npm
+        command: 'sudo npm install -g npm@latest'
+      -restore_cache:
+        key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+        name: Install node modules
+        command: npm install
+      - save_cache:
+        key: dependency-cache-{{ checksum "package.json" }}
+        paths:
+          - node_modules
+          
+  test:
+  
+  workflows:
+    version: 2
+    build_and_test:
+      jobs:
+        - build
+        - test:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
